# AZ-900-Guru-Agentic-RAG-Chatbot

./: .gitignore  Azure_Rag.py  README.md  azure.ipynb  pyproject.toml
agentic_coding/: .gitignore  Azure_Rag.py  README.md  pyproject.toml
agentic_coding/azure_prep/: chroma.sqlite3
agentic_coding/src/agentic_coding/: crew.py  load_jupyter.py  main.py
agentic_coding/src/agentic_coding/azure_prep/: Azure.txt  chroma.sqlite3
agentic_coding/src/agentic_coding/config/: agents.yaml  tasks.yaml
azure_prep/: chroma.sqlite3
