[project]
name = "agentic_coding"
version = "0.1.0"
description = "agentic_coding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=0.5.0",
    "crewai>=0.193.2",
    "gradio>=6.5.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "litellm>=1.75.3",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.8.0",
]

[project.scripts]
agentic_coding = "agentic_coding.main:run"
run_crew = "agentic_coding.main:run"
train = "agentic_coding.main:train"
replay = "agentic_coding.main:replay"
test = "agentic_coding.main:test"
run_with_trigger = "agentic_coding.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
